<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/about_sheet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:background="@color/primary_dark"
        android:text="@string/about_title"
        android:textAlignment="center"
        android:textColor="@color/primary_light" />
        <TextView
            android:id="@+id/about_sheet_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="@color/primary_dark"
            android:text="@string/about_developer"
            android:textAlignment="center"
            android:textColor="@color/primary" />

    </LinearLayout>

    <TextView
        android:id="@+id/about_sheet_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_light"
        style="@style/AppTheme.SubTitle.Dark"
        android:text="@string/credit_ic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_electric_car_launcher"
            android:contentDescription="@string/img_electric_car"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            style="@style/AppTheme.Body"
            android:text="@string/credit_ic_launcher" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_type2_mennekes"
            android:contentDescription="@string/pref_enable_type2_mennekes_label"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            style="@style/AppTheme.Body"
            android:text="@string/credit_ic_type2_mennekes"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_combo_ccs_eu"
            android:contentDescription="@string/pref_enable_combo_ccs_eu_label"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            style="@style/AppTheme.Body"
            android:text="@string/credit_ic_combo_css"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_type1_j1772"
            android:contentDescription="@string/pref_enable_type1_j1772_label"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            style="@style/AppTheme.Body"
            android:text="@string/credit_ic_type1_j1772"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_type1_ccs"
            android:contentDescription="@string/pref_enable_type1_ccs_label"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            style="@style/AppTheme.Body"
            android:text="@string/credit_ic_type1_css"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chademo"
            android:contentDescription="@string/pref_enable_chademo_label"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            style="@style/AppTheme.Body"
            android:text="@string/credit_ic_chademo"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150px"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tesla_hpwc"
            android:contentDescription="@string/pref_enable_tesla_hpwc_label"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            style="@style/AppTheme.Body"
            android:text="@string/credit_ic_tesla_hpwc"
            />
    </LinearLayout>

</LinearLayout>